src/test/ui/error-codes/E0572.stderr
error[E0572]: return statement outside of function body
  --> $DIR/E0572.rs:11:18
   |
LL | const FOO: u32 = return 0; //~ ERROR E0572
   |                  ^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0572"
